Image references added

--- a/game.html
+++ b/game.html
@@ -8,15 +8,18 @@
     <body>
         <h2>These are my favourite games</h2>
         <h3>Starcraft</h3>
+        <!--image source: wikipedia-->
         <p>This is a real-time strategy game that involves conflicts and wars among three extra-terrestrial species:
         terran, protoss and zerg</p>
         <img src="StarCraft.jpg" width="50%"/>
         <h3>The last of us</h3>
         <p>This is an adventure game that describes how an adult male (Joel) and a teenage gilr (Ellie) survive in
         an apocalypse world with zombies</p>
+        <!--image source: wikipedia-->
         <img src="The_Last_of_Us.jpg" width="50%"/>
         <h3>Uncharted</h3>
         <p>This is a first person shooting game that describes the treasure hunting life of Nathan Drake</p>
+        <!--image source: wikipedia-->
         <img src="uncharted.jpg" width="50%"/>
         <p></p>
         <h3>Other cool games</h3>
