--- a/sports.html
+++ b/sports.html
@@ -8,13 +8,16 @@
     <body>
         <h2>World cup</h2>
         <p>I find Belgium and France playing well in this World Cup and hope them win more games.</p>
+        <!--image source: https://www.sportskeeda.com/football/why-the-3-4-2-1-trend-has-come-at-the-right-time-for-belgium-s-golden-generation-->
         <img src="belgium_national_team.jpg" width="50%"/>
         <div class=belgium>Belgium has won all games in this World cup</div>
+        <!--image source: https://www.soccerpro.com/thecentercircle/the-nations-of-the-21st-world-cup-france-->
         <img src="france_national_team.png" width="50%"/>
         <div class=france>France has very strong mid-fielders and strikers.</div>
         <div>
             <h2>NBA</h2>
             <p>I am a huge fan of Golden State Warriors and especially the splash brothers (Stephen Curry and Klay Thompson).</p>
+            <!--image source: https://ftw.usatoday.com/2018/05/nba-playoffs-golden-state-warriors-why-are-they-called-hamptons-five-origin-story-->
             <img src="golden_state_warriors.jpg" width="50%"/>
         <p></p>
         </div>
